--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@ html, body {
   margin: 0;
   padding: 0;
   height: 100%;
-  /* display: flex; */
+  display: flex;
   width: 100%;
   scroll-behavior: smooth;
   font-family: 'Nunito', sans-serif; 
