--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -102,6 +102,83 @@ html, body {
   height: 4px;
   width: 32px;
 }
+.header-underline-overview {
+  background-color: #c0c3c2;
+  border-radius: 500px;
+  height: 2px;
+  width: 40%;
+}
+
+.header-title-2 {
+  /* font-size: 2rem; */
+  color: var(--focus-color);
+}
+
+/* .perspective-container {
+  background: #ffffff78;
+  padding: 20px;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(171, 166, 166, 0.1), 0 6px 20px rgba(135, 131, 131, 0.1);
+  transition: transform 0.3s ease-in-out;
+} */
+.perspective-container {
+  background: linear-gradient(to bottom, transparent, #ffffff78);
+  padding: 20px;
+  margin-top: 30px;
+  border-bottom-left-radius: 80px;
+  border-bottom-right-radius: 80px;
+  box-shadow: 0px 20px 20px 0px rgba(113, 109, 109, 0.1);
+  transition: transform 0.3s ease-in-out;
+}
+
+.perspective-header {
+  font-size: 1.2rem;
+  color: var(--description-color);
+}
+.perspective-description {
+  font-size: 0.9rem;
+  font-weight: 300;
+  /* width: 35%; */
+  /* padding-left: 5px;
+  padding-right: 5px; */
+}
+
+/* Responsive font sizes */
+@media (max-width: 1200px) {
+  .perspective-header {
+    font-size: 1.1rem;
+  }
+  .perspective-description {
+    font-size: 0.85rem;
+  }
+}
+
+@media (max-width: 992px) {
+  .perspective-header {
+    font-size: 1rem;
+  }
+  .perspective-description {
+    font-size: 0.8rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .perspective-header {
+    font-size: 0.9rem;
+  }
+  .perspective-description {
+    font-size: 0.75rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .perspective-header {
+    font-size: 0.8rem;
+  }
+  .perspective-description {
+    font-size: 0.7rem;
+  }
+}
 
 .card-content {
   background: #f5febd;
